# aws-robomaker-sample-application-open-source-rover

./: CONTRIBUTING.md  README.md  cloud9_config.py  monitor.py  roboMakerSettings.json  s3_results_monitor.py
robot_ws/src/martian_detector/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/martian_detector/launch/: martian_detector.launch  rover_martian_detector.launch
robot_ws/src/martian_detector/nodes/: notifier  object_detector
simulation_ws/: run.sh
simulation_ws/src/osr_urdf_with_controllers_and_launch/rover_description/: CMakeLists.txt  package.xml
simulation_ws/src/osr_urdf_with_controllers_and_launch/rover_description/launch/: display.launch  gazebo.launch
simulation_ws/src/osr_urdf_with_controllers_and_launch/rover_description/nodes/: motion
simulation_ws/src/osr_urdf_with_controllers_and_launch/rover_description/urdf/: rover_description.urdf
simulation_ws/src/osr_urdf_with_controllers_and_launch/rover_gazebo/: CMakeLists.txt  package.xml
simulation_ws/src/osr_urdf_with_controllers_and_launch/rover_gazebo/launch/: main_with_objects.launch  osr_mars_world_object_world.launch  osr_spawn.launch  rover.launch  world.launch
simulation_ws/src/osr_urdf_with_controllers_and_launch/rover_gazebo/models/green-alien/: model.config  model.sdf
simulation_ws/src/osr_urdf_with_controllers_and_launch/rover_gazebo/models/green-alien/meshes/: green-alien.dae
simulation_ws/src/osr_urdf_with_controllers_and_launch/rover_gazebo/models/mars_ground_plane/: model.config  model.sdf
simulation_ws/src/osr_urdf_with_controllers_and_launch/rover_gazebo/models/mars_ground_plane/materials/scripts/: mars_ground_plane.material
simulation_ws/src/osr_urdf_with_controllers_and_launch/rover_gazebo/worlds/: flat_mars.exported.world  flat_mars.world  mars-with-alien.world  mars-with-objects.world
web/: index.html
web/js/: martian_detector.js
