<?xml version="1.0"?>
<package format="2">
  <name>martian_detector</name>
  <version>1.0.0</version>
  <description>The martian_detector package</description>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>python-boto3-pip</depend>
</package>
